Fixed the text on page 3 cutting off on small mobile devices.

--- a/main.css
+++ b/main.css
@@ -228,21 +228,21 @@ header {
     position: relative;
     top: -93em;
     max-width: 100vw;
-    overflow-y: clip;
-    overflow-x: clip;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 #page3-bg {
     margin-top: 16em;
     background-color: var(--verydarkgrayblue);
     position: absolute;
-    height: 90vh;
+    height: fit-content;
     border-bottom-left-radius: 100px;
     border-top-right-radius: 35px;
     width: 100%;
 }
 #page3-text {
     color: var(--white);
-    margin: 10em 0;
+    margin: 10em 0 0;
 }
 #page3-title {
     margin: .5em 0;
